fixed title and some other minor stuff...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -206,11 +206,14 @@ function str2ab(str) {
 function loadMagazineDOM(data){
 	var data = $(data)
 	// get the .magazine element...
-	data = data.hasClass('magazine') ? data.children() : data.find('.magazine').children()
+	data = data.hasClass('magazine') ? data : data.find('.magazine')
+	var title = data.attr('name')
 
 	var mag = $('.magazine')
 	mag.children().remove()
-	mag.append(data)
+	mag
+		.append(data.children())
+		.attr('name', title)
 
 	runMagazineTemplates()
 	togglePageView(togglePageView('?'))
